@@ -169,6 +169,9 @@ typedef enum {
 
 	GTK_HTML_COMMAND_CURSOR_BOD,
 	GTK_HTML_COMMAND_CURSOR_EOD,
+
+	GTK_HTML_COMMAND_BLOCK_REDRAW,
+	GTK_HTML_COMMAND_UNBLOCK_REDRAW,
 } GtkHTMLCommandType;
 
 typedef enum {
